/*
 * Copyright (C) 2017 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";
option java_multiple_files = true;

package android.os;

// IncidentHeaderProto contains extra information the caller of incidentd want to
// attach in an incident report, the data should just be informative.
message IncidentHeaderProto {

    // From statsd config, the name of the anomaly, usually human readable.
    optional string incident_name = 1;

    // Format a human readable reason why an incident report is requested.
    // It's optional and may directly come from a user clicking the bug-report button.
    optional string reason = 2;

    // From statsd, the metric which causes the anomaly triggered.
    optional string metric_name = 3;

    // From statsd, the metric value exceeds the threshold. This is useful for
    // ValueMetric and GaugeMetric.
    oneof metric_value {
        int64 int64_value = 4;
        double double_value = 5;
    }

    // Defines which stats config used to fire the request.
    message StatsdConfigKey {
        optional int32 uid = 1;
        optional string name = 2;
    }
    optional StatsdConfigKey config_key = 6;
}
